syntax = "proto3";
package douyinBasic;
/* option go_package = "./core;core"; */
option go_package = ".;douyinBasic";

message douyin_feed_request {
  int64 latest_time = 1; // 可选参数，限制返回视频的最新投稿时间戳，精确到秒，不填表示当前时间
  string username = 2;
}

message douyin_feed_response {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
  repeated Video video_list = 3; // 视频列表
  int64 next_time = 4; // 本次返回的视频中，发布最早的时间，作为下次请求时的latest_time
}

message User {
  int64 id = 1; // 用户id
  string name = 2; // 用户名称
  int64 follow_count = 3; // 关注总数
  int64 follower_count = 4; // 粉丝总数
  bool is_follow = 5; // true-已关注，false-未关注
  string avatar = 6; //用户头像
  string background_image = 7; //用户个人页顶部大图
  string signature = 8; //个人简介
  int64 total_favorited = 9; //获赞数量
  int64 work_count = 10; //作品数量
  int64 favorite_count = 11; //点赞数量
}

message Video {
  int64 id = 1; // 视频唯一标识
  User author = 2; // 视频作者信息
  string play_url = 3; // 视频播放地址
  string cover_url = 4; // 视频封面地址
  int64 favorite_count = 5; // 视频的点赞总数
  int64 comment_count = 6; // 视频的评论总数
  bool is_favorite = 7; // true-已点赞，false-未点赞
  string title = 8; // 视频标题
}

message douyin_user_register_request {
  string username = 1; // 注册用户名，最长32个字符
  string password = 2; // 密码，最长32个字符
}

message douyin_user_register_response {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
  int64 user_id = 3; // 用户id
}

message douyin_user_login_request {
  string username = 1; // 登录用户名
  string password = 2; // 登录密码
}

message douyin_user_login_response {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
  int64 user_id = 3; // 用户id
}

message douyin_user_request {
  int64 user_id = 1; // 用户id
}

message douyin_user_response {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
  User user = 3; // 用户信息
}

message douyin_publish_action_request {
  string username = 1; // 用户鉴权token
  string play_url = 2;
  string title = 3; // 视频标题
}

message douyin_publish_action_response {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
}

message douyin_publish_list_request {
  int64 user_id = 1; // 用户id
}

message douyin_publish_list_response {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
  repeated Video video_list = 3; // 用户发布的视频列表
}

service BasicApiService {
    rpc Feed(douyin_feed_request) returns (douyin_feed_response) {}
    rpc UserRegister(douyin_user_register_request) returns (douyin_user_register_response) {}
    rpc UserLogin(douyin_user_login_request) returns (douyin_user_login_response) {}
    rpc User(douyin_user_request) returns (douyin_user_response) {}
    rpc PublishAction(douyin_publish_action_request) returns (douyin_publish_action_response) {}
    rpc PublishList(douyin_publish_list_request) returns (douyin_publish_list_response) {}
}
